--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <canvas></canvas>
+    <img id="player-sprite" src="imgs/player.png" width="51" height="37" />
+    <img id="invader-sprite" src="imgs/invader.png" width="59" height="33" />
   </body>
   <script src="invaders.js"></script>
 </html>
