Remove Fighter game system

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <img id="player-sprite" src="imgs/player.png" width="51" height="37" />
     <img id="invader-sprite" src="imgs/invader.png" width="59" height="33" />
   </body>
-  <script src="invaders.js"></script>
+  <script src="invaders.js" type="module"></script>
+  <script src="Sprite.js" type="module"></script>
 </html>
