--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
   </head>
   <body>
     <canvas></canvas>
-    <img id="player-sprite" src="imgs/player.png" width="51" height="37" />
-    <img id="invader-sprite" src="imgs/invader.png" width="59" height="33" />
+    <img
+      id="player-sprite"
+      src="imgs/player.png"
+      width="51"
+      height="37"
+      hidden
+    />
+    <img
+      id="invader-sprite"
+      src="imgs/invader.png"
+      width="59"
+      height="33"
+      hidden
+    />
   </body>
   <script src="invaders.js" type="module"></script>
   <script src="Sprite.js" type="module"></script>
